update ladybird. added desktop icons to install stage. added patch to fix harfbuzz detection, fontconfig detection and fontconfig linker error.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
   cacert-2023-12-12.pem: 3c4a17b6c725462993e42152c5ba97645168243a
   public_suffix_list.dat: a86fdd2d9c1761ab6b1af6e220d9a700e02653d2
-  master.tar.gz: 724dfab7f5c6f3e0373304daebf492fc296ec4c6
+  ladybird-20250607.tar.zst: 94b6e7b40c360ce26467835863c015c69f68046b
